@@ -1,0 +1,17 @@
+//
+//  HRImageAppletTile.h
+//  HReader
+//
+//  Created by Marshall Huss on 4/11/12.
+//  Copyright (c) 2012 MITRE Corporation. All rights reserved.
+//
+
+#import "HRAppletTile.h"
+
+@interface HRImageAppletTile : HRAppletTile
+
+
+
+- (void)setTitle:(NSString *)title tileImage:(UIImage *)tileImage fullScreenImage:(UIImage *)fullScreenImage;
+
+@end
